syntax = "proto3";

option csharp_namespace = "AccountService.gRPC";

package account;

service AccountManagement {
  rpc Login (LoginRequest) returns (LoginReply);
  rpc GetUserDetails (UserDetailsRequest) returns (UserDetailsReply);
}

message LoginRequest {
  string userName = 1;
  string password = 2;
}

message LoginReply {
  bool succeeded = 1;
  string message = 2;
  string token = 3;
}

message UserDetailsRequest {
  string userName = 1;
}

message User{
  string id=1;
  string firstName = 2;
  string lastName = 3;
  string userName = 4;
  string Email = 5;
}

message UserDetailsReply {
  bool succeeded = 1;
  string message = 2;
  User user = 3;
}